--- a/css/normalize.css
+++ b/css/normalize.css
@@ -16,7 +16,6 @@ figure,
 footer,
 header,
 hgroup,
-main,
 nav,
 section,
 summary {
@@ -32,7 +31,7 @@ canvas,
 video {
     display: inline-block;
     display: inline;
-    zoom: 1;
+  /*  zoom: 1;*/
 }
 
 /**
@@ -90,6 +89,7 @@ textarea {
 
 body {
     margin: 0;
+    padding:0;
 }
 
 /* ==========================================================================
@@ -139,8 +139,8 @@ h3 {
 }
 
 h4 {
-    font-size: 1em;
-    margin: 1.33em 0;
+    font-size: 0.9em;
+/*    margin: 1.33em 0;*/
 }
 
 h5 {
@@ -219,8 +219,8 @@ code,
 kbd,
 pre,
 samp {
-    font-family: monospace, serif;
-    _font-family: 'courier new', monospace;
+    font-family: monospace, serif;/*
+    _font-family: 'courier new', monospace;*/
     font-size: 1em;
 }
 
